Added submodules and added relevant update command to package.json.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "lint:server": "npm run lint --prefix server",
     "lint": "npm-run-all --parallel lint:*",
     "prepare": "husky install",
-    "deploy": "git push --force origin main:pub"
+    "deploy": "git push --force origin main:pub",
+    "updateSubmodules": "git submodule update --init --recursive"
   },
   "devDependencies": {
     "@learningfuze/lfz-config": "^1.0.0",
