Re-added submodules in server folder.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "goctopus"]
 	path = goctopus
 	url = https://github.com/Escape-Technologies/goctopus
+[submodule "server/clairvoyance"]
+	path = server/clairvoyance
+	url = https://github.com/nikitastupin/clairvoyance
+[submodule "server/goctopus"]
+	path = server/goctopus
+	url = https://github.com/Escape-Technologies/goctopus
