--- a/server/package.json
+++ b/server/package.json
@@ -9,11 +9,13 @@
     "lint": "eslint . --ext ts,js --report-unused-disable-directives --max-warnings 0"
   },
   "dependencies": {
+    "@types/react": "^18.3.3",
     "argon2": "^0.40.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.0",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "react": "^18.3.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.17",
